# limen-os

./: .ec2.env.example  .env.example  .gitignore  .laptop.env.example  .pre-commit-config.yaml  .prettierignore  .rsyncignore  CONTRIBUTING.md  Cargo.toml  DEVELOPER.md  Dockerfile.serve  LICENSE  Makefile  NOTICE.md  README.md  README_DJ.md  SECURITY.md  TOS.md  Vagrantfile  identify_tracks.py  index.md  issues.md  language_examples_usage.md  package.json  process_results.py  split_tracks.sh  tracklist.cue  tsconfig.json
.claude/: settings.local.json
addon/: Dockerfile  build.yaml  config.yaml  run.sh
apps/mobile/: README.md  pubspec.yaml
apps/mobile/android/: settings.gradle.kts
apps/mobile/android/app/: build.gradle.kts
apps/mobile/ios/Runner/: Info.plist
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/lib/: main.dart
apps/mobile/lib/screens/: home.dart  remote.dart  settings.dart  voice.dart
apps/mobile/lib/services/: limen.dart
apps/mobile/lib/utils/: breakpoints.dart
apps/mobile/lib/widgets/: connection_banner.dart  responsive_scaffold.dart
apps/mobile/macos/Flutter/: GeneratedPluginRegistrant.swift
apps/mobile/macos/Runner.xcodeproj/: project.pbxproj
apps/mobile/test/: widget_test.dart
apps/mobile/web/: index.html  manifest.json
apps/player/: .env.example  .gitignore  .prettierignore  Dockerfile  MANIFEST  Makefile  README.md  RELEASE_READY.md  docker-compose.yml  nginx.conf  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/player/backend/search-service/: README.md
apps/player/docs/: desktop-0.2.0-issues.md  desktop-known-limitations.md  desktop-qa-checklist.md  desktop-reader-editor-plan.md  live-beacon.md  manifest.md  master-architecture.md  release-notes-template.md  release.md  roadmap.md
apps/player/flutter/: README.md  RELEASE.md  pubspec.yaml
apps/player/flutter/android/: settings.gradle.kts
apps/player/flutter/lib/: main.dart
apps/player/flutter/linux/: CMakeLists.txt
apps/player/flutter/test/: widget_test.dart
apps/player/flutter/web/: index.html  manifest.json
apps/player/flutter/windows/: CMakeLists.txt
apps/player/public/: default.wid
apps/player/scripts/: build-latest-news-feed.ts  build_tauri.sh  build_tauri_dmg.sh  build_tauri_mas.sh  check_secrets_staged.sh  dev_tauri_web.sh  generate-latest-wid.ts  refresh-contrib-wids.ts
apps/player/src/: App.tsx  index.css  main.tsx
apps/player/src-tauri/: Cargo.toml  tauri.conf.json  tauri.mas.conf.json
apps/player/src-tauri/capabilities/: default.json
apps/player/src-tauri/entitlements/: macos-appstore.plist  macos-info.plist
apps/player/src-tauri/src/: error.rs  lib.rs  main.rs  (+2 more)
apps/shell/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/shell/public/: login.html
apps/shell/src/: App.tsx  vite-env.d.ts
apps/shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/shell/src-tauri/capabilities/: default.json
apps/shell/src-tauri/icons/: icon.icns
apps/shell/src-tauri/src/: apps.rs  ipc_client.rs  lib.rs  main.rs
apps/shell/src-tauri/src/commands/: mod.rs
apps/tui/: Cargo.toml
apps/tui/src/: app.rs  main.rs  sysinfo.rs
apps/tui/src/ipc/: mod.rs
apps/tui/src/ui/: mod.rs
crates/limen-ai/: Cargo.toml
crates/limen-ai/src/: lib.rs
crates/limen-ai/src/context/: mod.rs
crates/limen-ai/src/intent/: mod.rs
crates/limen-ai/src/router/: claude.rs  gemini.rs  mod.rs  openai_compat.rs
crates/limen-core/: Cargo.toml
crates/limen-core/src/: agentflow.rs  daemon.rs  events.rs  lib.rs  relay.rs  session.rs  voice_relay.rs
crates/limen-core/src/companion/: mod.rs
crates/limen-core/src/ipc/: mod.rs  server.rs
crates/limen-core/src/plugins/: host.rs  mod.rs  registry.rs
crates/limen-display/: Cargo.toml
crates/limen-display/src/: lib.rs  window.rs
crates/limen-voice/: Cargo.toml
crates/limen-voice/src/: capture.rs  lib.rs  pipeline.rs  vad.rs  whisper_client.rs
crates/limen-voice/src/stt/: mod.rs
crates/limen-voice/src/tts/: mod.rs
docker/: dev-services.yml  haos-stack.yml  stack.yml
docker/homeassistant/: init-proxy.sh
docker/mosquitto/: mosquitto.conf
docker/tools/: agentflow.dockerfile
docker/tools/agentflow/: README.md  compose.yaml  fix_history.py  requirements-dev.txt  requirements.txt  test_supervisor.py
docs/: PACKAGING.md  PHILOSOPHY.html  PHILOSOPHY.md  ha-proxy-setup.md  index.html  ports.md  style.css
docs/api/: IPC.html  IPC.md  OVERVIEW.html  OVERVIEW.md  PLUGINS.html  PLUGINS.md  VOICE.html  VOICE.md  WID.html  WID.md
docs/apps/: mobile-companion.html  mobile-companion.md  shell-frontend.html  shell-frontend.md  tui-interface.html  tui-interface.md
docs/architecture/: ARCHITECTURE.html  ARCHITECTURE.md
docs/crates/: limen-ai.md  limen-core.md  limen-display.md  limen-voice.md  synapse-ai.html  synapse-core.html  synapse-display.html  synapse-voice.html
docs/design/: paradigms.html  paradigms.md  scenes.html  scenes.md
docs/guides/: GETTING_STARTED.html  GETTING_STARTED.md  GRANDMOTHER_GUIDE.html  GRANDMOTHER_GUIDE.md
docs/technical/: deployment-ops.html  deployment-ops.md  hlc-wid-spec.html  hlc-wid-spec.md  security-permissions.html  security-permissions.md
scripts/: archive.sh  bb-standalone-setup.sh  beaglebone-setup.sh  deploy-vm.sh  deploy.sh  docs-html.sh  ec2-pull.sh  ec2-push.sh  ha-agent.ts  ha-tunnel.plist  ha-tunnel.sh  haos-provision.sh  kiosk-fix.sh  laptop-push.sh  mock-agents.mjs  nginx-synapse.conf  package.json  rsyncd.conf  serve-node.mjs  serve.ts  server-setup.sh  services-setup.sh  setup.sh  synapse-preview.service  synapse-rsyncd.service  sync.sh  tsconfig.json  vagrant-provision.sh
scripts/systemd/: jupyter.service  limen-kiosk.service  limen-novnc.service  limen-openbox.service  limen-serve.service  limen-stack.service  limen-tauri.service  limen-tui.service  limen-voiced.service  limen-x11vnc.service  limen-xvfb.service  nodered.service  synapsd.service
services/sinergym/: Dockerfile  requirements.txt  server.py
services/smartcities/: Dockerfile  requirements.txt  server.py
(+309 files in other folders)
