[workspace]
resolver = "2"
members = [
    "crates/limen-core",
    "crates/limen-ai",
    "crates/limen-voice",
    "crates/limen-display",
    "apps/shell/src-tauri",
    "apps/tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Lazaros Toumanidis <laztoum@protonmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lazToum/limen-os"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# HTTP/WebSocket
axum = { version = "0.8.8", features = ["ws", "macros"] }
reqwest = { version = "0.13.2", features = ["json", "stream", "multipart"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }

# IPC / D-Bus
zbus = { version = "5.14.0", features = ["tokio"] }

# WASM plugin host
wasmtime = { version = "42.0.1", features = ["async"] }

# AI clients
async-openai = "0.33.0"

# Voice / Audio
hound = "3.5.1"                          # WAV I/O
cpal = "0.17.3"                        # Cross-platform audio

# Tauri
tauri = { version = "2.10.3", features = ["tray-icon", "macos-private-api"] }
tauri-build = { version = "2.5.6", features = [] }
# specta / tauri-specta — add back when wiring TS type generation (Phase 3)
# specta = { version = "=2.0.0-rc.22", features = ["derive"] }
# tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

# TUI
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }

# System info
sysinfo = "0.38.4"

# MQTT (AgentFlow bridge)
rumqttc = { version = "0.25.1", features = ["use-rustls"] }

# Utilities
chrono = { version = "0.4.44", features = ["serde"] }
bytes = "1.11.1"
futures = "0.3.32"
parking_lot = "0.12.5"
dashmap = "6.1.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
