[package]
name = "limen-tui"
description = "LIMEN OS terminal UI — Ratatui shell, SSH-accessible, full feature parity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "limen-tui"
path = "src/main.rs"

[dependencies]
# Workspace
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
tokio-stream.workspace = true

# TUI
ratatui.workspace = true
crossterm.workspace = true

# System info
sysinfo.workspace = true

# IPC types (connect to limen-core daemon)
limen-core = { path = "../../crates/limen-core", default-features = false }

# Direct AI fallback when daemon isn't running
limen-ai = { path = "../../crates/limen-ai" }
